--- a/courses/templates/courses/kurslar.html
+++ b/courses/templates/courses/kurslar.html
@@ -4,18 +4,20 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 {% endblock  %}
 
+{% block js_files %}
+{% endblock  %}
+
 {% block page_title %}
-    iletişim
+    Kurslar
 {% endblock  %}</title>
 
 {% block content %}
-<div class="container mt-3">
-    <div class="row">
-        <div class="col-12">
-            <!-- content -->
-             <h1>İletişim</h1>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-12">
+                <h1>{{ category }}</h1>
+                <p>{{ category_text}}</p>
+            </div>
         </div>
     </div>
-</div>
-
 {% endblock content %}
