--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -1,47 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css">
-    <title>Document</title>
-</head>
-<body>
-    
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
-        <div class="container">
-            <a href="/" class="navbar-brand">CourseApp</a>
-                
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                        <a href="/" class="nav-link">Kurslar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact">İletişim</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">Hakkımızda</a>
-                    </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container mt-3">
-        <div class="row">
-            <div class="col-3">
-                <!-- menu -->
-                 <div class="list-group">
-                 <a href="" class="list-group-item list-group-item-action">Programlama</a>
-                 <a href="" class="list-group-item list-group-item-action">Web Geliştirme</a>
-                 <a href="" class="list-group-item list-group-item-action">Mobil Geliştirme</a>
-            </div>
-            <div class="col-9">
-                <!-- content -->
-            </div>
+{% extends "layout.html" %}
+
+{% block css_files %}
+{% endblock  %}
+
+{% block page_title %}
+    hakkımızda
+{% endblock  %}</title>
+
+{% block content %}
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-12">
+            <!-- content -->
+             <h1>hakkımızda</h1>
         </div>
     </div>
+</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/js/bootstrap.min.js"></script>
-
-</body>
-</html>
+{% endblock content %}
