--- a/courses/templates/courses/partials/_course.html
+++ b/courses/templates/courses/partials/_course.html
@@ -2,24 +2,17 @@
 <div class="card mb-3">
     <div class="row">
         <div class="col-4">
-            <img class="img-fluid rounded start" src="{% static 'courses/img/' %}{{ course.image }}" alt="{{ course.title }}">
-        </div>
+            <img class="img-fluid rounded start" src="{% static 'courses/img/'|add:course.imageUrl %}" alt="{{ course.title }}">
+        </div>     
         <div class="col-8">
             <div class="card-body">
-                <h5 class="card-title">{{ course.title}}</h5>
-                <p class="card-text">{{ course.description|truncatechars:15 }}</p>
-                    <span>  
-                    {% if course.isUpdated %}
-                        <span class="badge bg-success">
-                            Güncellendi
-                        </span> 
-                    {% else %}
-                        <span class="badge bg-warning"> 
-                            Güncelleme bekliyor
-                        </span>                
-                    {% endif %}
-                    </span>
-                    <p>{{ course.date|date:"d m y / D" }}</p>
+                <h5 class="card-title">
+                    <a href="{% url "course_details" course.slug %}">
+                    {{ course.title}}
+                </a>
+                </h5>
+                <p class="card-text">{{ course.description|truncatechars:50 }}</p>
+                    <p>{{ course.date|date:"SHORT_DATE_FORMAT" }}</p>
             </div>
         </div>
     </div>
